# Cell-Reproduction-Algorithm

./: CMakeCache.txt  CMakeLists.txt  CellsAlgorithm.cpp  LEEME.txt  Makefile  cells  cmake_install.cmake  test  testrandom  testsolis
results/results_cells/: results_10_10.txt  results_10_30.txt  results_10_50.txt  results_11_10.txt  results_11_30.txt  results_11_50.txt  results_12_10.txt  results_12_30.txt  results_12_50.txt  results_13_10.txt  results_13_30.txt  results_13_50.txt  results_14_10.txt  results_14_30.txt  results_14_50.txt  results_15_10.txt  results_15_30.txt  results_15_50.txt  results_16_10.txt  results_16_30.txt  results_16_50.txt  results_17_10.txt  results_17_30.txt  results_17_50.txt  results_18_10.txt  results_18_30.txt  results_18_50.txt  results_19_10.txt  results_19_30.txt  results_19_50.txt  results_1_10.txt  results_1_30.txt  results_1_50.txt  results_20_10.txt  results_20_30.txt  results_20_50.txt  results_21_10.txt  results_21_30.txt  results_21_50.txt  results_22_10.txt  (+50 more)
results/results_cellsMejorado/: results_10_10.txt  results_10_30.txt  results_10_50.txt  results_11_10.txt  results_11_30.txt  results_11_50.txt  results_12_10.txt  results_12_30.txt  results_12_50.txt  results_13_10.txt  results_13_30.txt  results_13_50.txt  results_14_10.txt  results_14_30.txt  results_14_50.txt  results_15_10.txt  results_15_30.txt  results_15_50.txt  results_16_10.txt  results_16_30.txt  results_16_50.txt  results_17_10.txt  results_17_30.txt  results_17_50.txt  results_18_10.txt  results_18_30.txt  results_18_50.txt  results_19_10.txt  results_19_30.txt  (+64 more)
(+99 files in other folders)
